# Aquamarine-toy-UI-Framework

./: .gitignore  CMakeLists.txt  README.md  Window.cpp  main.cpp  shaderParse.cpp  shaderParse.h
AquamarineUI/AquamarineUI/: Button.cpp  Button.hpp  Window.cpp  Window.h  main.cpp  shaderParse.cpp  shaderParse.h
AquamarineUI/AquamarineUI.xcodeproj/: project.pbxproj
AquamarineUI/AquamarineUI.xcodeproj/project.xcworkspace/xcuserdata/vincent-tom.xcuserdatad/: UserInterfaceState.xcuserstate
AquamarineUI/AquamarineUI.xcodeproj/xcshareddata/xcschemes/: AquamarineUI.xcscheme
AquamarineUI/AquamarineUI.xcodeproj/xcuserdata/vincent-tom.xcuserdatad/xcschemes/: xcschememanagement.plist
AquamarineUI/AquamarineUI/dependencies/shader/: shader.glsl
